# sch-core-python

./: .envrc  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  flake.nix  setup.in.py  setup.py
.github/workflows/: build.yml  conan.yml  package.yml  sch-core-python.recipe
.github/workflows/sources/: package.yml
conan/test_package/: conanfile.py  test.py
debian/: changelog  control  copyright  rules
include/: sch_wrapper.hpp
include/sch/Python/: SCHAddon.h
sch/: __init__.py  c_sch.pxd  c_sch_private.pxd  sch.pxd  sch.pyx
src/: generate.py
tests/: test_sch.py
